compiler/src/test/resources/a4/marmoset/valid/J1_7_Reachability_EmptyVoidMethod/J1_7_Reachability_EmptyVoidMethod.java
// REACHABILITY

public class J1_7_Reachability_EmptyVoidMethod {
	public J1_7_Reachability_EmptyVoidMethod() {}
	
	public void empty() {}
	
	public static int test() {
		return 123;
	}
}
